--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             </div>
             <div id="socials-container">
                 <img src="./assets/linkedin.png" alt="My Linkedin profile"
-                class="icon" onclick="location.href='https://linkeidnprofile.es/'"/>
+                class="icon" onclick="location.href='https://linkedin.com/in/joseluismatez'"/>
                 <img src="./assets/github.png" alt="My GitHub profile"
-                class="icon" onclick="location.href='https://github.es/'"/>
+                class="icon" onclick="location.href='https://github.es/josematez'"/>
                 <img src="./assets/scholar.png" alt="My Google Scholar profile"
-                class="icon" onclick="location.href='https://scholar.es/'"/>
+                class="icon" onclick="location.href='https://scholar.google.com/citations?user=GBlpikEAAAAJ'"/>
 
 
             </div>
@@ -74,18 +74,22 @@
                   class="icon"
                 />
                 <h3>Education</h3>
-                <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                <p>PhD in Mechatronics Engineering (in progress)<br /><br /> MSc in Mechatronics Engineering <br /><br />Degree in Robotics, Electronics and Mechatronics Engineering </p>
               </div>
             </div>
           </div>
           <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+            <p style="text-align: justify; margin-bottom: 15px;">
+              PhD Candidate in Computer Vision and Robotics at the University of Malaga with extensive hands-on experience in developing cutting-edge solutions for autonomous and intelligent systems. Passionate about driving progress through research and practical applications.
+            </p>
+            <p style="text-align: justify; margin-bottom: 15px;">
+                I have worked on various projects that bridge the gap between academic research and industry, focusing on perception-based and AI-driven solutions. My industry experience includes an internship at Ericsson, where I developed computer vision approaches to solve real-world challenges, resulting in a patent under review.
+            </p>
+            <p style="text-align: justify; margin-bottom: 15px;">
+                I'm enthusiastic about moving to the industry and applying the acquired knowledge and practical skills to solve real-world problems and make a meaningful impact.
+            </p>
+            <p style="text-align: justify; margin-bottom: 15px;">
+                Computer Vision | Robotics | Autonomous Systems | Perception | AI | Deep Learning | Machine Learning | Data | Research | Automation | Innovation | Science | R&D | Cyber-Physical Systems
             </p>
           </div>
           <div class="section__pic-container">
@@ -104,7 +108,7 @@
         />
     </section>
     <section id="experience">
-        #TODO
+        #Site Under Construction
         <img
           src="./assets/arrow.png"
           alt="Arrow icon"
@@ -116,6 +120,7 @@
         <section id="projects">
             <p class="section__text__p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
+            Site Under Construction
             <div class="experience-details-container">
               <div class="about-containers">
                 <div class="details-container color-container">
@@ -142,30 +147,6 @@
                     </button>
                   </div>
                 </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                      <img
-                        src="./assets/project-1.png"
-                        alt="Project 1"
-                        class="project-img"
-                      />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
-                    <div class="btn-container">
-                      <button
-                        class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/'"
-                      >
-                        Github
-                      </button>
-                      <button
-                        class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/'"
-                      >
-                        Live Demo
-                      </button>
-                    </div>
-                  </div>
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
@@ -233,7 +214,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:joseluismtzbnd@gmail.com">joseluismtzbnd@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
@@ -241,7 +222,7 @@
               alt="LinkedIn icon"
               class="icon contact-icon"
             />
-            <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+            <p><a href="https://www.linkedin.com/in/joseluismatez">LinkedIn</a></p>
           </div>
         </div>
       </section>
@@ -256,7 +237,7 @@
             </ul>
           </div>
         </nav>
-        <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Jose Luis Matez. All Rights Reserved. Webpage created based on this <a href="https://www.youtube.com/watch?v=ldwlOzRvYOU">YouTube video</a></p>
       </footer>
       <script src="script.js"></script>
     </body>
