--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Jose Luis Matez Bandera</h1>
-            <p class="section__text__p2">Computer Vision Researcher</p>
+            <p class="section__text__p2">Computer Vision Engineer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact</button>
