add closing functionality for detailed view of projects

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <div class="project-content">
                     <div class="project-image-container">
                         <img src="./assets/projects/voxeland_thumbnail.jpg" alt="Voxeland Preview" class="project-preview">
-                        <video class="project-video" muted loop playsinline>
+                        <video class="project-video" muted playsinline loop preload="metadata">
                             <source src="./assets/videos/voxeland_map.mp4" type="video/mp4">
                         </video>
                         <div class="project-gradient"></div>
