bugfix close button of detailed projects

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
         <!-- Project Modal -->
         <div class="project-modal">
             <div class="modal-content">
-                <span class="close-modal">&times;</span>
+                <button class="close-modal">×</button>
                 <div class="modal-body">
                     <div class="modal-media-container">
                         <!-- Media (video/image) will be inserted here -->
