floating navigator adjustments for better visualization

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 </head>
 <body>
     <nav class="floating-nav">
+        <div class="burger-menu">
+            <span></span>
+        </div>
         <ul>
             <li><a href="#profile">Home</a></li>
             <li><a href="#about">About Me</a></li>
@@ -588,22 +591,22 @@
                                 <img src="./assets/github.png" alt="GitHub" class="link-icon">
                                 GitHub Repository
                             </a>
-                        </div>
+                  </div>
                         <div class="modal-citation-container">
                             <button class="citation-toggle">
                                 <span>Show Citation</span>
                                 <img src="./assets/arrow.png" alt="Toggle" class="toggle-icon">
-                            </button>
+                    </button>
                             <div class="modal-citation">
                                 <pre class="bibtex-citation"></pre>
                                 <button class="copy-citation" title="Copy BibTeX">
                                     <img src="./assets/copy.png" alt="Copy" class="copy-icon">
                                     Copy BibTeX
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                    </button>
+                  </div>
                 </div>
+              </div>
+            </div>
             </div>
         </div>
 
